--- a/Source/Wifinian/Views/Styles/CommonControls.xaml
+++ b/Source/Wifinian/Views/Styles/CommonControls.xaml
@@ -73,7 +73,7 @@
 	</Style>
 
 	<Style x:Key="MenuButtonStyle" TargetType="{x:Type Button}">
-		<Setter Property="Background" Value="{StaticResource App.Background}"/>
+		<Setter Property="Background" Value="{StaticResource ToggleButton.Normal.Background}"/>
 		<Setter Property="BorderThickness" Value="0"/>
 		<Setter Property="Foreground" Value="{StaticResource ToggleButton.Normal.Foreground}"/>
 		<Setter Property="FontSize" Value="12"/>
@@ -117,7 +117,7 @@
 									<Storyboard>
 										<ColorAnimation Storyboard.TargetName="border"
 														Storyboard.TargetProperty="(Control.Background).(SolidColorBrush.Color)"
-														To="{StaticResource ToggleButton.Checked.ForegroundColor}"
+														To="{StaticResource ToggleButton.Checked.BackgroundColor}"
 														Duration="0:0:0.1"/>
 										<DoubleAnimation Storyboard.TargetName="border"
 														 Storyboard.TargetProperty="(Control.Background).(SolidColorBrush.Opacity)"
@@ -244,23 +244,6 @@
 		</Setter>
 	</Style>
 
-	<!-- RepeatButton for ScrollBar -->
-	<Style x:Key="RepeatButtonTransparent" TargetType="{x:Type RepeatButton}">
-		<Setter Property="OverridesDefaultStyle" Value="True"/>
-		<Setter Property="Background" Value="Transparent"/>
-		<Setter Property="Focusable" Value="False"/>
-		<Setter Property="IsTabStop" Value="False"/>
-		<Setter Property="Template">
-			<Setter.Value>
-				<ControlTemplate TargetType="{x:Type RepeatButton}">
-					<Rectangle Width="{TemplateBinding Width}"
-							   Height="{TemplateBinding Height}"
-							   Fill="{TemplateBinding Background}"/>
-				</ControlTemplate>
-			</Setter.Value>
-		</Setter>
-	</Style>
-
 	<!-- ScrollBar -->
 	<SolidColorBrush x:Key="ScrollBar.Static.Background" Color="{StaticResource ScrollBar.Normal.BackgroundColor}"/>
 	<SolidColorBrush x:Key="ScrollBar.Static.Border" Color="{StaticResource ScrollBar.Normal.BackgroundColor}"/>
@@ -270,9 +253,9 @@
 	<SolidColorBrush x:Key="ScrollBar.MouseOver.Border" Color="{StaticResource ScrollBar.MouseOver.BackgroundColor}"/>
 	<SolidColorBrush x:Key="ScrollBar.MouseOver.Thumb" Color="{StaticResource ScrollBar.MouseOver.ThumbColor}"/>
 	<SolidColorBrush x:Key="ScrollBar.MouseOver.Glyph" Color="#000000"/>
-	<SolidColorBrush x:Key="ScrollBar.Pressed.Background" Color="{StaticResource ScrollBar.Pressed.ThumbColor}"/>
-	<SolidColorBrush x:Key="ScrollBar.Pressed.Border" Color="{StaticResource ScrollBar.Pressed.ThumbColor}"/>
-	<SolidColorBrush x:Key="ScrollBar.Pressed.Thumb" Color="{StaticResource ScrollBar.Pressed.ThumbColor}"/>
+	<SolidColorBrush x:Key="ScrollBar.Pressed.Background" Color="{StaticResource ScrollBar.MouseOver.BackgroundColor}"/>
+	<SolidColorBrush x:Key="ScrollBar.Pressed.Border" Color="{StaticResource ScrollBar.MouseOver.BackgroundColor}"/>
+	<SolidColorBrush x:Key="ScrollBar.Pressed.Thumb" Color="{StaticResource ScrollBar.MouseOver.ThumbColor}"/>
 	<SolidColorBrush x:Key="ScrollBar.Pressed.Glyph" Color="#FFFFFF"/>
 	<SolidColorBrush x:Key="ScrollBar.Disabled.Background" Color="{StaticResource ScrollBar.Normal.BackgroundColor}"/>
 	<SolidColorBrush x:Key="ScrollBar.Disabled.Border" Color="{StaticResource ScrollBar.Normal.BackgroundColor}"/>
@@ -321,31 +304,22 @@
 		</Setter>
 	</Style>
 
-	<Style x:Key="ScrollBarThumbVertical" TargetType="{x:Type Thumb}">
+	<Style x:Key="ScrollBarTrackButton" TargetType="{x:Type RepeatButton}">
 		<Setter Property="OverridesDefaultStyle" Value="True"/>
+		<Setter Property="Focusable" Value="False"/>
 		<Setter Property="IsTabStop" Value="False"/>
 		<Setter Property="Template">
 			<Setter.Value>
-				<ControlTemplate TargetType="{x:Type Thumb}">
-					<Rectangle x:Name="rectangle"
-							   Width="{TemplateBinding Width}"
+				<ControlTemplate TargetType="{x:Type RepeatButton}">
+					<Rectangle Width="{TemplateBinding Width}"
 							   Height="{TemplateBinding Height}"
-							   Fill="{StaticResource ScrollBar.Static.Thumb}"
-							   SnapsToDevicePixels="True" UseLayoutRounding="True"/>
-					<ControlTemplate.Triggers>
-						<Trigger Property="IsMouseOver" Value="True">
-							<Setter TargetName="rectangle" Property="Fill" Value="{StaticResource ScrollBar.MouseOver.Thumb}"/>
-						</Trigger>
-						<Trigger Property="IsDragging" Value="True">
-							<Setter TargetName="rectangle" Property="Fill" Value="{StaticResource ScrollBar.Pressed.Thumb}"/>
-						</Trigger>
-					</ControlTemplate.Triggers>
+							   Fill="Transparent"/>
 				</ControlTemplate>
 			</Setter.Value>
 		</Setter>
 	</Style>
 
-	<Style x:Key="ScrollBarThumbHorizontal" TargetType="{x:Type Thumb}">
+	<Style x:Key="ScrollBarTrackThumb" TargetType="{x:Type Thumb}">
 		<Setter Property="OverridesDefaultStyle" Value="True"/>
 		<Setter Property="IsTabStop" Value="False"/>
 		<Setter Property="Template">
@@ -387,11 +361,8 @@
 							<RowDefinition Height="0.00001*"/>
 							<RowDefinition MaxHeight="{DynamicResource {x:Static SystemParameters.VerticalScrollBarButtonHeightKey}}"/>
 						</Grid.RowDefinitions>
-						<Border Grid.Row="1"
-								BorderBrush="{TemplateBinding BorderBrush}"
-								BorderThickness="{TemplateBinding BorderThickness}"
-								Background="{TemplateBinding Background}"/>
-						<RepeatButton x:Name="PART_LineUpButton"
+						<RepeatButton Grid.Row="0"
+									  x:Name="PART_LineUpButton"
 									  Style="{StaticResource ScrollBarButton}"
 									  IsEnabled="{TemplateBinding IsMouseOver}"
 									  Command="{x:Static ScrollBar.LineUpCommand}">
@@ -401,20 +372,22 @@
 								  Margin="3,4,3,3"
 								  Fill="{StaticResource ScrollBar.Static.Glyph}"/>
 						</RepeatButton>
+						<Border Grid.Row="1"
+								Background="{TemplateBinding Background}"/>
 						<Track Grid.Row="1"
 							   x:Name="PART_Track"
 							   IsDirectionReversed="True"
 							   IsEnabled="{TemplateBinding IsMouseOver}">
 							<Track.DecreaseRepeatButton>
-								<RepeatButton Style="{StaticResource RepeatButtonTransparent}"
+								<RepeatButton Style="{StaticResource ScrollBarTrackButton}"
 											  Command="{x:Static ScrollBar.PageUpCommand}"/>
 							</Track.DecreaseRepeatButton>
 							<Track.IncreaseRepeatButton>
-								<RepeatButton Style="{StaticResource RepeatButtonTransparent}"
+								<RepeatButton Style="{StaticResource ScrollBarTrackButton}"
 											  Command="{x:Static ScrollBar.PageDownCommand}"/>
 							</Track.IncreaseRepeatButton>
 							<Track.Thumb>
-								<Thumb Style="{StaticResource ScrollBarThumbVertical}"/>
+								<Thumb Style="{StaticResource ScrollBarTrackThumb}"/>
 							</Track.Thumb>
 						</Track>
 						<RepeatButton Grid.Row="2"
@@ -482,11 +455,8 @@
 									<ColumnDefinition Width="0.00001*"/>
 									<ColumnDefinition MaxWidth="{DynamicResource {x:Static SystemParameters.HorizontalScrollBarButtonWidthKey}}"/>
 								</Grid.ColumnDefinitions>
-								<Border Grid.Column="1"
-										BorderBrush="{TemplateBinding BorderBrush}"
-										BorderThickness="{TemplateBinding BorderThickness}"
-										Background="{TemplateBinding Background}"/>
-								<RepeatButton x:Name="PART_LineLeftButton"
+								<RepeatButton Grid.Row="0"
+											  x:Name="PART_LineLeftButton"
 											  Style="{StaticResource ScrollBarButton}"
 											  IsEnabled="{TemplateBinding IsMouseOver}"
 											  Command="{x:Static ScrollBar.LineLeftCommand}">
@@ -496,19 +466,21 @@
 										  Margin="3"
 										  Fill="{StaticResource ScrollBar.Static.Glyph}"/>
 								</RepeatButton>
+								<Border Grid.Row="1"
+										Background="{TemplateBinding Background}"/>
 								<Track Grid.Column="1"
 									   x:Name="PART_Track"
 									   IsEnabled="{TemplateBinding IsMouseOver}">
 									<Track.DecreaseRepeatButton>
-										<RepeatButton Style="{StaticResource RepeatButtonTransparent}"
+										<RepeatButton Style="{StaticResource ScrollBarTrackButton}"
 													  Command="{x:Static ScrollBar.PageLeftCommand}"/>
 									</Track.DecreaseRepeatButton>
 									<Track.IncreaseRepeatButton>
-										<RepeatButton Style="{StaticResource RepeatButtonTransparent}"
+										<RepeatButton Style="{StaticResource ScrollBarTrackButton}"
 													  Command="{x:Static ScrollBar.PageRightCommand}"/>
 									</Track.IncreaseRepeatButton>
 									<Track.Thumb>
-										<Thumb Style="{StaticResource ScrollBarThumbHorizontal}"/>
+										<Thumb Style="{StaticResource ScrollBarTrackThumb}"/>
 									</Track.Thumb>
 								</Track>
 								<RepeatButton Grid.Column="2"
